2. Поиск файлов по критерию [#783 #323358]